--- a/index.html
+++ b/index.html
@@ -2,8 +2,13 @@
 <html>
 <head>
 	<title>Betsa-1</title>
+	<link rel="stylesheet" href="http://sctcloud.com.mx/tools/cdn/bootstrap/3.2.0/css/bootstrap.min.css">
 </head>
-<body>
+<body class="container">
+	<div class="jumbotron">
+		<h1>Hola mundo</h1>
+		<p>Bienvenidos al la pagina de angie</p>
+	</div>
 <h1>Hola betsa</h1>
 </body>
 </html>
