--- a/index.html
+++ b/index.html
@@ -10,9 +10,21 @@
 		<p>Bienvenidos al la pagina de angie</p>
 	</div>
 <h1>Hola betsa</h1>
-</body>
+<div class="row">
+	<div class="col-lg-6">
+		<ol>
+			<li>opcion 1</li>
+			<li>opcion 2</li>
+			<li>opcion 3</li>
+			<li>opcion 4</li>
+		</ol>
+	</div>
+</div>
 
 <footer>
 	a que huele?
 </footer>
+
+<script type="text/javascript" src="app.js"></script>
+</body>
 </html>
